# divicast

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  terms.md
.github/workflows/: ci.yml  publish.yml
docs/: bazi_module.md  birth_chart_changes.md  sixline_module.md
examples/: bazi_example.py  sixline_example.py
src/divicast/: __init__.py  hex.json  time_utils.py
src/divicast/base/: symbol.py
src/divicast/birth_chart/: analysis.py  analysis_enums.py  analysis_models.py  birth.py  daemon.py  geju.py  output.py  relation_models.py
src/divicast/entities/: daemon.py  dizhi.py  ganzhi.py  liushen.py  misc.py  relative.py  tiangan.py  trigram.py  wuxing.py
src/divicast/sixline/: __init__.py  divinatory_symbol.py  output.py  schema.json
tests/: helpers.py  test_base.py  test_birth_chart.py  test_birth_chart_analysis.py  test_birth_chart_bazi_mcp_regression.py  test_birth_chart_relations.py  test_divinatory_symbol.py  test_dizhi.py  test_geju.py  test_mix.py  test_version.py
tests/fixtures/: bazi_mcp_goldens.json
