[project]
name = "divicast"
version = "0.1.1"
description = "This is a metaphysical chart library, including six line"
readme = "README.md"
authors = [
    { name = "Wáng Sōng", email = "wangsquirrel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "rich==14.0.0",
    "tyme4py>=1.3.4",
]
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/wangsquirrel/divicast"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "jsonschema>=4.25.0",
]
